generated-out/vanilla/dear-imgui-raw-vanilla/cbits/dcimgui_nodefaultargfunctions.h

//-----------------------------------------------------------------------------
// [SECTION] Forward declarations and basic types
// Auto-generated forward declarations for C header
typedef struct ImVec2_t ImVec2;
typedef struct ImVec4_t ImVec4;
typedef unsigned int ImU32;        // 32-bit unsigned integer (often used to store packed colors)
typedef struct ImDrawList_t ImDrawList;                              // A single draw command list (generally one per window, conceptually you may see this as a dynamic "mesh" builder)
typedef struct ImFont_t ImFont;                                      // Runtime data for a single font within a parent ImFontAtlas
typedef struct ImFontBaked_t ImFontBaked;                            // Baked data for a ImFont at a given size.
typedef int ImDrawTextFlags;        // -> enum ImDrawTextFlags_      // Internal, do not use!
typedef int ImGuiWindowFlags;       // -> enum ImGuiWindowFlags_     // Flags: for Begin(), BeginChild()
// Character types
// (we generally use UTF-8 encoded string in the API. This is storage specifically for a decoded character used for keyboard input and display)
typedef unsigned int ImWchar32;        // A single decoded U32 character/code point. We encode them as multi bytes UTF-8 when used in strings.
typedef unsigned short ImWchar16;      // A single decoded U16 character/code point. We encode them as multi bytes UTF-8 when used in strings.
typedef ImWchar32 ImWchar;
typedef ImWchar16 ImWchar;
// ImVec4: 4D vector used to store clipping rectangles, colors etc. [Compile-time configurable type]
struct ImVec4_t
{
    float x, y, z, w;
};
// Windows
// - Begin() = push window to the stack and start appending to it. End() = pop window from the stack.
// - Passing 'bool* p_open != NULL' shows a window-closing widget in the upper-right corner of the window,
//   which clicking will set the boolean to false when clicked.
// - You may append multiple times to the same window during the same frame by calling Begin()/End() pairs multiple times.
//   Some information such as 'flags' or 'p_open' will only be considered by the first call to Begin().
// - Begin() return false to indicate the window is collapsed or fully clipped, so you may early out and omit submitting
//   anything to the window. Always call a matching End() for each Begin() call, regardless of its return value!
//   [Important: due to legacy reason, Begin/End and BeginChild/EndChild are inconsistent with all other functions
//    such as BeginMenu/EndMenu, BeginPopup/EndPopup, etc. where the EndXXX call should only be called if the corresponding
//    BeginXXX function returned true. Begin and BeginChild are the only odd ones out. Will be fixed in a future update.]
// - Note that the bottom of window stack always contains a window called "Debug".
CIMGUI_API bool ImGui_Begin(const char* name, bool* p_open /* = NULL */, ImGuiWindowFlags flags /* = 0 */);
CIMGUI_API void ImGui_PlotLinesCallback(const char* label, float (*values_getter)(void* data, int idx), void* data, int values_count, int values_offset /* = 0 */, const char* overlay_text /* = NULL */, float scale_min /* = FLT_MAX */, float scale_max /* = FLT_MAX */, ImVec2 graph_size /* = ImVec2(0, 0) */);
CIMGUI_API void ImGui_PlotHistogramCallback(const char* label, float (*values_getter)(void* data, int idx), void* data, int values_count, int values_offset /* = 0 */, const char* overlay_text /* = NULL */, float scale_min /* = FLT_MAX */, float scale_max /* = FLT_MAX */, ImVec2 graph_size /* = ImVec2(0, 0) */);
// Draw command list
// This is the low-level list of polygons that ImGui:: functions are filling. At the end of the frame,
// all command lists are passed to your ImGuiIO::RenderDrawListFn function for rendering.
// Each dear imgui window contains its own ImDrawList. You can use ImGui::GetWindowDrawList() to
// access the current window draw list and draw custom primitives.
// You can interleave normal ImGui:: calls and adding primitives to the current draw list.
// In single viewport mode, top-left is == GetMainViewport()->Pos (generally 0,0), bottom-right is == GetMainViewport()->Pos+Size (generally io.DisplaySize).
// You are totally free to apply whatever transformation matrix you want to the data (depending on the use of the transformation you may want to apply it to ClipRect as well!)
// Important: Primitives are always added to the list and not culled (culling is done at higher-level by ImGui:: functions), if you use this API a lot consider coarse culling your drawn objects.
struct ImDrawList_t
{
    // This is what you have to render
    ImVector_ImDrawCmd    CmdBuffer;          // Draw commands. Typically 1 command = 1 GPU draw call, unless the command is a callback.
    ImVector_ImDrawIdx    IdxBuffer;          // Index buffer. Each command consume ImDrawCmd::ElemCount of those
    ImVector_ImDrawVert   VtxBuffer;          // Vertex buffer.
    ImDrawListFlags       Flags;              // Flags, you may poke into these to adjust anti-aliasing settings per-primitive.

    // [Internal, used while building lists]
    unsigned int          _VtxCurrentIdx;     // [Internal] generally == VtxBuffer.Size unless we are past 64K vertices, in which case this gets reset to 0.
    ImDrawListSharedData* _Data;              // Pointer to shared draw data (you can use ImGui::GetDrawListSharedData() to get the one from current ImGui context)
    ImDrawVert*           _VtxWritePtr;       // [Internal] point within VtxBuffer.Data after each add command (to avoid using the ImVector<> operators too much)
    ImDrawIdx*            _IdxWritePtr;       // [Internal] point within IdxBuffer.Data after each add command (to avoid using the ImVector<> operators too much)
    ImVector_ImVec2       _Path;              // [Internal] current path building
    ImDrawCmdHeader       _CmdHeader;         // [Internal] template of active commands. Fields should match those of CmdBuffer.back().
    ImDrawListSplitter    _Splitter;          // [Internal] for channels api (note: prefer using your own persistent instance of ImDrawListSplitter!)
    ImVector_ImVec4       _ClipRectStack;     // [Internal]
    ImVector_ImTextureRef _TextureStack;      // [Internal]
    ImVector_ImU8         _CallbacksDataBuf;  // [Internal]
    float                 _FringeScale;       // [Internal] anti-alias fringe is scaled by this value, this helps to keep things sharp while zooming at vertex buffer content
    const char*           _OwnerName;         // Pointer to owner window's name for debugging

    //inline  void  AddEllipse(const ImVec2& center, float radius_x, float radius_y, ImU32 col, float rot = 0.0f, int num_segments = 0, float thickness = 1.0f) { AddEllipse(center, ImVec2(radius_x, radius_y), col, rot, num_segments, thickness); } // OBSOLETED in 1.90.5 (Mar 2024)
    //inline  void  AddEllipseFilled(const ImVec2& center, float radius_x, float radius_y, ImU32 col, float rot = 0.0f, int num_segments = 0) { AddEllipseFilled(center, ImVec2(radius_x, radius_y), col, rot, num_segments); }                        // OBSOLETED in 1.90.5 (Mar 2024)
    //inline  void  PathEllipticalArcTo(const ImVec2& center, float radius_x, float radius_y, float rot, float a_min, float a_max, int num_segments = 0) { PathEllipticalArcTo(center, ImVec2(radius_x, radius_y), rot, a_min, a_max, num_segments); } // OBSOLETED in 1.90.5 (Mar 2024)
    //inline  void  AddBezierCurve(const ImVec2& p1, const ImVec2& p2, const ImVec2& p3, const ImVec2& p4, ImU32 col, float thickness, int num_segments = 0) { AddBezierCubic(p1, p2, p3, p4, col, thickness, num_segments); }                         // OBSOLETED in 1.80 (Jan 2021)
    //inline  void  PathBezierCurveTo(const ImVec2& p2, const ImVec2& p3, const ImVec2& p4, int num_segments = 0) { PathBezierCubicCurveTo(p2, p3, p4, num_segments); }                                                                                // OBSOLETED in 1.80 (Jan 2021)
};
// Font runtime data for a given size
// Important: pointers to ImFontBaked are only valid for the current frame.
struct ImFontBaked_t
{
    // [Internal] Members: Hot ~20/24 bytes (for CalcTextSize)
    ImVector_float       IndexAdvanceX;             // 12-16 // out // Sparse. Glyphs->AdvanceX in a directly indexable way (cache-friendly for CalcTextSize functions which only this info, and are often bottleneck in large UI).
    float                FallbackAdvanceX;          // 4     // out // FindGlyph(FallbackChar)->AdvanceX
    float                Size;                      // 4     // in  // Height of characters/line, set during loading (doesn't change after loading)
    float                RasterizerDensity;         // 4     // in  // Density this is baked at

    // [Internal] Members: Hot ~28/36 bytes (for RenderText loop)
    ImVector_ImU16       IndexLookup;               // 12-16 // out // Sparse. Index glyphs by Unicode code-point.
    ImVector_ImFontGlyph Glyphs;                    // 12-16 // out // All glyphs.
    int                  FallbackGlyphIndex;        // 4     // out // Index of FontFallbackChar

    // [Internal] Members: Cold
    float                Ascent, Descent;           // 4+4   // out // Ascent: distance from top to bottom of e.g. 'A' [0..FontSize] (unscaled)
    unsigned int         MetricsTotalSurface : 26;  // 3  // out // Total surface in pixels to get an idea of the font rasterization/texture cost (not exact, we approximate the cost of padding between glyphs)
    unsigned int         WantDestroy : 1;           // 0  //     // Queued for destroy
    unsigned int         LoadNoFallback : 1;        // 0  //     // Disable loading fallback in lower-level calls.
    unsigned int         LoadNoRenderOnLayout : 1;  // 0  //     // Enable a two-steps mode where CalcTextSize() calls will load AdvanceX *without* rendering/packing glyphs. Only advantageous if you know that the glyph is unlikely to actually be rendered, otherwise it is slower because we'd do one query on the first CalcTextSize and one query on the first Draw.
    int                  LastUsedFrame;             // 4  //     // Record of that time this was bounds
    ImGuiID              BakedId;                   // 4     //     // Unique ID for this baked storage
    ImFont*              OwnerFont;                 // 4-8   // in  // Parent font
    void*                FontLoaderDatas;           // 4-8   //     // Font loader opaque storage (per baked font * sources): single contiguous buffer allocated by imgui, passed to loader.
};
// Font runtime data and rendering
// - ImFontAtlas automatically loads a default embedded font for you if you didn't load one manually.
// - Since 1.92.0 a font may be rendered as any size! Therefore a font doesn't have one specific size.
// - Use 'font->GetFontBaked(size)' to retrieve the ImFontBaked* corresponding to a given size.
// - If you used g.Font + g.FontSize (which is frequent from the ImGui layer), you can use g.FontBaked as a shortcut, as g.FontBaked == g.Font->GetFontBaked(g.FontSize).
struct ImFont_t
{
    // [Internal] Members: Hot ~12-20 bytes
    ImFontBaked*             LastBaked;                                             // 4-8   // Cache last bound baked. NEVER USE DIRECTLY. Use GetFontBaked().
    ImFontAtlas*             OwnerAtlas;                                            // 4-8   // What we have been loaded into.
    ImFontFlags              Flags;                                                 // 4     // Font flags.
    float                    CurrentRasterizerDensity;                              // Current rasterizer density. This is a varying state of the font.

    // [Internal] Members: Cold ~24-52 bytes
    // Conceptually Sources[] is the list of font sources merged to create this font.
    ImGuiID                  FontId;                                                // Unique identifier for the font
    float                    LegacySize;                                            // 4     // in  // Font size passed to AddFont(). Use for old code calling PushFont() expecting to use that size. (use ImGui::GetFontBaked() to get font baked at current bound size).
    ImVector_ImFontConfigPtr Sources;                                               // 16    // in  // List of sources. Pointers within OwnerAtlas->Sources[]
    ImWchar                  EllipsisChar;                                          // 2-4   // out // Character used for ellipsis rendering ('...'). If you ever want to temporarily swap this for an alternative/dummy char, make sure to clear EllipsisAutoBake.
    ImWchar                  FallbackChar;                                          // 2-4   // out // Character used if a glyph isn't found (U+FFFD, '?')
    ImU8                     Used8kPagesMap[(IM_UNICODE_CODEPOINT_MAX +1)/8192/8];  // 1 bytes if ImWchar=ImWchar16, 17 bytes if ImWchar==ImWchar32. Store 1-bit for each block of 8K codepoints that has one active glyph. This is mainly used to facilitate iterations across all used codepoints.
    bool                     EllipsisAutoBake;                                      // 1     //     // Mark when the "..." glyph (== EllipsisChar) needs to be generated by combining multiple '.'.
    ImGuiStorage             RemapPairs;                                            // 16    //     // Remapping pairs when using AddRemapChar(), otherwise empty.
#ifndef IMGUI_DISABLE_OBSOLETE_FUNCTIONS
    float                    Scale;                                                 // 4     // in  // Legacy base font scale (~1.0f), multiplied by the per-window font scale which you can adjust with SetWindowFontScale()
#endif // #ifndef IMGUI_DISABLE_OBSOLETE_FUNCTIONS
};
CIMGUI_API bool         ImFont_IsGlyphInFont(ImFont* self, ImWchar c);
CIMGUI_API bool         ImFont_IsLoaded(const ImFont* self);
CIMGUI_API const char*  ImFont_GetDebugName(const ImFont* self);                                                                                                         // Fill ImFontConfig::Name.
// [Internal] Don't use!
// 'max_width' stops rendering after a certain width (could be turned into a 2d size). FLT_MAX to disable.
// 'wrap_width' enable automatic word-wrapping across multiple lines to fit into given width. 0.0f to disable.
CIMGUI_API ImFontBaked* ImFont_GetFontBaked(ImFont* self, float font_size, float density /* = -1.0f */);                                                                 // Get or create baked data for given size
CIMGUI_API const char*  ImFont_CalcWordWrapPosition(ImFont* self, float size, const char* text, const char* text_end, float wrap_width);
CIMGUI_API const char* ImFont_CalcWordWrapPositionA(ImFont* self, float scale, const char* text, const char* text_end, float wrap_width);
// [Internal] Don't use!
CIMGUI_API void         ImFont_ClearOutputData(ImFont* self);
CIMGUI_API void         ImFont_AddRemapChar(ImFont* self, ImWchar from_codepoint, ImWchar to_codepoint);                                                                 // Makes 'from_codepoint' character points to 'to_codepoint' glyph.
CIMGUI_API bool         ImFont_IsGlyphRangeUnused(ImFont* self, unsigned int c_begin, unsigned int c_last);