generated-out/vanilla/dear-imgui-raw-vanilla/cbits/DearImGuiWrappers.h

void ImFont_CalcTextSizeA_wrap(ImFont* self, float size, float max_width, float wrap_width, const char* text_begin, const char* text_end, const char** out_remaining, ImVec2* _out);
void ImFont_RenderChar_wrap(ImFont* self, ImDrawList* draw_list, float size, ImVec2 const* pos, ImU32 col, ImWchar c, const ImVec4* cpu_fine_clip);
void ImFont_RenderText_wrap(ImFont* self, ImDrawList* draw_list, float size, ImVec2 const* pos, ImU32 col, ImVec4 const* clip_rect, const char* text_begin, const char* text_end, float wrap_width, ImDrawTextFlags flags);
void ImGui_PlotHistogramCallback_wrap(const char* label, float (*values_getter)(void* data, int idx), void* data, int values_count, int values_offset, const char* overlay_text, float scale_min, float scale_max, ImVec2 const* graph_size);
void ImGui_PlotLinesCallback_wrap(const char* label, float (*values_getter)(void* data, int idx), void* data, int values_count, int values_offset, const char* overlay_text, float scale_min, float scale_max, ImVec2 const* graph_size);