generated-out/vanilla/dear-imgui-raw-vanilla/src/DearImGui/Raw/ImFont.hsc

{-# LANGUAGE CApiFFI #-}
{-# LANGUAGE PatternSynonyms #-}
{-# OPTIONS_GHC -Wno-unused-imports #-}

-- This file was generated by dear-bindings-ffi. Do not edit by hand.
-- Haskell function names: lower the first character of the C name.
-- e.g. ImGui_Begin -> imGui_Begin

module DearImGui.Raw.ImFont where

import Foreign.C.String (CString)
import Foreign.C.Types
import Foreign.Marshal.Alloc (alloca)
import Foreign.Marshal.Utils (with)
import Foreign.Ptr (FunPtr, Ptr)
import Foreign.Storable (Storable (..))
import Data.Int (Int8, Int16, Int32, Int64)
import Data.Word (Word8, Word16, Word32, Word64)
import DearImGui.Raw.Types

#include "dcimgui_nodefaultargfunctions.h"

-- functions

-- C: void AddRemapChar(ImFont* self, ImWchar from_codepoint, ImWchar to_codepoint)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImFont_AddRemapChar"
  imFont_AddRemapChar :: (Ptr ImFont) -> ImWchar -> ImWchar -> IO ()
foreign import capi unsafe "DearImGuiWrappers.h ImFont_CalcTextSizeA_wrap"
  c_imFont_CalcTextSizeA :: (Ptr ImFont) -> CFloat -> CFloat -> CFloat -> CString -> CString -> (Ptr CString) -> (Ptr ImVec2) -> IO ()

imFont_CalcTextSizeA :: (Ptr ImFont) -> CFloat -> CFloat -> CFloat -> CString -> CString -> (Ptr CString) -> IO ImVec2
imFont_CalcTextSizeA self size max_width wrap_width text_begin text_end out_remaining =
  alloca $ \_pOut -> c_imFont_CalcTextSizeA self size max_width wrap_width text_begin text_end out_remaining _pOut >> peek _pOut

-- C: const char* CalcWordWrapPosition(ImFont* self, float size, const char* text, const char* text_end, float wrap_width)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImFont_CalcWordWrapPosition"
  imFont_CalcWordWrapPosition :: (Ptr ImFont) -> CFloat -> CString -> CString -> CFloat -> IO CString
-- C: const char* CalcWordWrapPositionA(ImFont* self, float scale, const char* text, const char* text_end, float wrap_width)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImFont_CalcWordWrapPositionA"
  imFont_CalcWordWrapPositionA :: (Ptr ImFont) -> CFloat -> CString -> CString -> CFloat -> IO CString
-- C: void ClearOutputData(ImFont* self)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImFont_ClearOutputData"
  imFont_ClearOutputData :: (Ptr ImFont) -> IO ()
-- C: const char* GetDebugName(const ImFont* self)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImFont_GetDebugName"
  imFont_GetDebugName :: (Ptr ImFont) -> IO CString
-- C: ImFontBaked* GetFontBaked(ImFont* self, float font_size, float density)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImFont_GetFontBaked"
  imFont_GetFontBaked :: (Ptr ImFont) -> CFloat -> CFloat -> IO (Ptr ImFontBaked)
-- C: bool IsGlyphInFont(ImFont* self, ImWchar c)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImFont_IsGlyphInFont"
  imFont_IsGlyphInFont :: (Ptr ImFont) -> ImWchar -> IO CBool
-- C: bool IsGlyphRangeUnused(ImFont* self, unsigned int c_begin, unsigned int c_last)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImFont_IsGlyphRangeUnused"
  imFont_IsGlyphRangeUnused :: (Ptr ImFont) -> CUInt -> CUInt -> IO CBool
-- C: bool IsLoaded(const ImFont* self)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImFont_IsLoaded"
  imFont_IsLoaded :: (Ptr ImFont) -> IO CBool
foreign import capi unsafe "DearImGuiWrappers.h ImFont_RenderChar_wrap"
  c_imFont_RenderChar :: (Ptr ImFont) -> (Ptr ImDrawList) -> CFloat -> (Ptr ImVec2) -> ImU32 -> ImWchar -> (Ptr ImVec4) -> IO ()

imFont_RenderChar :: (Ptr ImFont) -> (Ptr ImDrawList) -> CFloat -> ImVec2 -> ImU32 -> ImWchar -> (Ptr ImVec4) -> IO ()
imFont_RenderChar self draw_list size pos col c cpu_fine_clip =
  with pos $ \_p3 -> c_imFont_RenderChar self draw_list size _p3 col c cpu_fine_clip

foreign import capi unsafe "DearImGuiWrappers.h ImFont_RenderText_wrap"
  c_imFont_RenderText :: (Ptr ImFont) -> (Ptr ImDrawList) -> CFloat -> (Ptr ImVec2) -> ImU32 -> (Ptr ImVec4) -> CString -> CString -> CFloat -> ImDrawTextFlags -> IO ()

imFont_RenderText :: (Ptr ImFont) -> (Ptr ImDrawList) -> CFloat -> ImVec2 -> ImU32 -> ImVec4 -> CString -> CString -> CFloat -> ImDrawTextFlags -> IO ()
imFont_RenderText self draw_list size pos col clip_rect text_begin text_end wrap_width flags =
  with pos $ \_p3 -> with clip_rect $ \_p5 -> c_imFont_RenderText self draw_list size _p3 col _p5 text_begin text_end wrap_width flags

